--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.5</version>
+        <version>3.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -58,6 +58,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        
+        <dependency>
+   			 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -113,8 +118,28 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.5.13</version>
         </dependency>
+        
+        <dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+   			 <artifactId>jjwt-api</artifactId>
+   			 <version>0.11.5</version>
+		</dependency>
+
+		<dependency>
+   			 <groupId>io.jsonwebtoken</groupId>
+   			 <artifactId>jjwt-impl</artifactId>
+   			 <version>0.11.5</version>
+   			 <scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+   			 <groupId>io.jsonwebtoken</groupId>
+   			 <artifactId>jjwt-jackson</artifactId>
+   			 <version>0.11.5</version>
+   			 <scope>runtime</scope>
+		</dependency>
+            
 
     </dependencies>
 
